--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -1,15 +1,14 @@
 <nav
-  class="z-50 sticky top-2 bg-gray-100 dark:bg-gray-800 after:bg-gray-100/10 dark:after:bg-gray-100/10 mx-auto border border-gray-200/75 dark:border-gray-600/75 rounded-2xl after:h-px after:pointer-events-none shadow-xl"
+  class="top-2 z-50 sticky bg-gray-100 after:bg-gray-100/10 dark:after:bg-gray-100/10 dark:bg-gray-800 shadow-xl mx-auto border border-gray-200/75 dark:border-gray-600/75 rounded-2xl after:h-px after:pointer-events-none"
 >
   <div class="mx-auto px-4 sm:px-6 lg:px-8">
     <div class="relative flex justify-between items-center h-16">
-      <!-- Mobile menu button -->
       <div class="sm:hidden left-0 absolute inset-y-0 flex items-center">
         <button
           type="button"
           (click)="toggleMobileMenu()"
           data-mobile-menu-button
-          class="inline-flex relative justify-center items-center hover:bg-gray-100 dark:hover:bg-white/10 p-3 rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-500/50 text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-all duration-300 ease-out"
+          class="inline-flex relative justify-center items-center hover:bg-gray-100 dark:hover:bg-white/10 p-3 rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-500/50 text-gray-600 hover:text-gray-900 dark:hover:text-white dark:text-gray-400 transition-all duration-300 ease-out"
         >
           <span class="absolute -inset-0.5"></span>
           <span class="sr-only">Open menu</span>
@@ -30,7 +29,6 @@
         </button>
       </div>
 
-      <!-- Logo -->
       <div class="flex flex-1 justify-center sm:justify-start items-center">
         <div class="flex items-center shrink-0">
           <div class="flex items-center space-x-3">
@@ -45,7 +43,6 @@
           </div>
         </div>
 
-        <!-- Desktop Navigation -->
         <div class="hidden sm:block sm:ml-8">
           <div class="flex space-x-6">
             <a
@@ -92,7 +89,6 @@
         </div>
       </div>
 
-      <!-- Account Menu -->
       <div
         class="right-0 sm:static absolute inset-y-0 sm:inset-auto flex items-center sm:ml-6 pr-2 sm:pr-0"
       >
@@ -100,13 +96,12 @@
       </div>
     </div>
 
-    <!-- Mobile Navigation Menu -->
     @if (isMobileMenuOpen) {
     <div
       data-mobile-menu
-      class="sm:hidden absolute top-full left-0 right-0 mt-2 mx-4 bg-white/95 dark:bg-gray-900/95 backdrop-blur-xl border border-gray-200/75 dark:border-gray-600/75 rounded-2xl shadow-2xl animate-in slide-in-from-top-2 duration-300"
+      class="sm:hidden top-full right-0 left-0 absolute bg-white/95 dark:bg-gray-900/95 slide-in-from-top-2 shadow-2xl backdrop-blur-xl mx-4 mt-2 border border-gray-200/75 dark:border-gray-600/75 rounded-2xl animate-in duration-300"
     >
-      <div class="px-4 pt-3 pb-3 space-y-4">
+      <div class="space-y-4 px-4 pt-3 pb-3">
         <a
           href="/dashboard"
           (click)="closeMobileMenu()"
@@ -117,7 +112,7 @@
           "
         >
           <svg
-            class="w-5 h-5 mr-3 text-emerald-600 dark:text-emerald-400"
+            class="mr-3 w-5 h-5 text-emerald-600 dark:text-emerald-400"
             fill="none"
             stroke="currentColor"
             viewBox="0 0 24 24"
@@ -147,7 +142,7 @@
           "
         >
           <svg
-            class="w-5 h-5 mr-3 text-gray-500 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+            class="mr-3 w-5 h-5 text-gray-500 dark:group-hover:text-white dark:text-gray-400 group-hover:text-gray-900"
             fill="none"
             stroke="currentColor"
             viewBox="0 0 24 24"
@@ -171,7 +166,7 @@
           "
         >
           <svg
-            class="w-5 h-5 mr-3 text-gray-500 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+            class="mr-3 w-5 h-5 text-gray-500 dark:group-hover:text-white dark:text-gray-400 group-hover:text-gray-900"
             fill="none"
             stroke="currentColor"
             viewBox="0 0 24 24"
@@ -195,7 +190,7 @@
           "
         >
           <svg
-            class="w-5 h-5 mr-3 text-gray-500 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+            class="mr-3 w-5 h-5 text-gray-500 dark:group-hover:text-white dark:text-gray-400 group-hover:text-gray-900"
             fill="none"
             stroke="currentColor"
             viewBox="0 0 24 24"
@@ -214,3 +209,24 @@
     }
   </div>
 </nav>
+<div
+  class="top-16 z-40 sticky flex justify-between items-center bg-gray-200/75 dark:bg-gray-600/75 -mt-3 p-2 pt-4 border-0 rounded-bl-2xl rounded-br-2xl w-full lg:w-52 truncate"
+>
+  <div class="flex justify-center items-center gap-2">
+    @if(currentOrg?.logo) {<img
+      [src]="currentOrg?.logo"
+      [alt]="currentOrg?.name"
+      class="rounded-lg size-6"
+    />}
+    <p class="truncate font" [title]="currentOrg?.name">
+      {{ currentOrg?.name }}
+    </p>
+  </div>
+  <button
+    class="flex justify-center items-center hover:scale-105 cursor-pointer"
+    (click)="hadleOpenModalOrg()"
+  >
+    <ng-icon name="heroArrowPathRoundedSquareSolid" />
+  </button>
+</div>
+<app-modal-change-org #orgModal />
