--- a/src/app/components/ui/input/input.html
+++ b/src/app/components/ui/input/input.html
@@ -1,75 +1,45 @@
 <div class="flex flex-col gap-2">
-  @if (label) {
-  <label [class]="getLabelClasses()">{{ label }}</label>
+  @if (label()) {
+  <label class="font-medium text-gray-700 dark:text-gray-300 text-sm">
+    {{ label() }}
+  </label>
   }
 
   <div class="relative">
     <input
-      [type]="getInputType()"
-      [placeholder]="placeholder"
-      [value]="value"
-      [disabled]="disabled"
-      [required]="required"
-      [class]="getInputClasses()"
-      (input)="onInput($event)"
-      (focus)="onFocus()"
-      (blur)="onBlur()"
+      [type]="inputType"
+      [placeholder]="placeholder()"
+      [value]="valueModel()"
+      [disabled]="disabled()"
+      [required]="required()"
+      [class]="inputClasses"
+      (input)="handleInput($event)"
+      (blur)="handleBlur()"
     />
 
-    @if (type === 'email') {
+    @switch (type()) { @case ('email') {
     <div class="right-0 absolute inset-y-0 flex items-center pr-3">
-      <svg
-        class="w-5 h-5 text-gray-500 dark:text-gray-400"
-        fill="none"
-        stroke="currentColor"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
-        ></path>
-      </svg>
+      <ng-icon name="heroAtSymbolSolid" class="size-6" />
     </div>
-    } @if (type === 'password') {
+    } @case ('password') {
     <div class="right-0 absolute inset-y-0 flex items-center pr-3">
       <button
         type="button"
         (click)="togglePasswordVisibility()"
-        class="text-gray-500 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-300 transition-colors duration-200 cursor-pointer"
+        class="text-gray-500 hover:text-gray-600 dark:hover:text-gray-300 dark:text-gray-400 transition-colors duration-200"
       >
-        @if (showPassword) {
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.878 9.878L3 3m6.878 6.878L21 21"
-          ></path>
-        </svg>
+        @if (showPassword()) {
+        <ng-icon name="heroEyeSlashSolid" class="size-6" />
+
         } @else {
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-          ></path>
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
-          ></path>
-        </svg>
+        <ng-icon name="heroEyeSolid" class="size-6" />
         }
       </button>
     </div>
-    }
+    } }
   </div>
 
-  @if (error) {
-  <p [class]="getErrorClasses()">{{ error }}</p>
+  @if (error()) {
+  <p class="text-red-600 dark:text-red-400 text-xs">{{ error() }}</p>
   }
 </div>
